
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef char uchar ;



__attribute__((used)) static uchar
gethex(char c)
{
 return (c >= '0' && c <= '9') ? c - '0' :
   (c >= 'a' && c <= 'f') ? c - 'a' + 10 :
    (c >= 'A' && c <= 'F') ? c - 'A' + 10 :
     -1;
}
